grading-service/k8s/k8s-submission-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: submission-service
  name: submission-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: submission-service
  template:
    metadata:
      labels:
        app: submission-service
    spec:
      containers:
        - image: us.gcr.io/my-project-1529917597814/submission-service
          imagePullPolicy: IfNotPresent
          name: submission-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/info
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
