grading-service/k8s/k8s-submission-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: submission-service-v2
    type: microservice
    tier: backend
  name: submission-service-v2
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: submission-service-v2
  type: NodePort
