grading-service/k8s/k8s-submission-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: submission-service-ingress-v2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api/v2/submissions(/|$)(.*)
            backend:
              serviceName: submission-service-v2
              servicePort: 8080
